# mqtt-codec

./: .clang-format  CMakeLists.txt  LICENSE  README.md  mqtt.h  mqtt_basic.c  mqtt_basic.h  mqtt_codec.h
include/: mqtt.h  mqtt_basic.h  mqtt_codec.h  mqtt_types.h
src/: mqtt_basic.c  mqtt_codec.c  mqtt_codec.h
test/: example.c
